# fellracemap

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.sh  pyproject.toml
data/: race_data.csv  race_data.feather
fellracemap/: map.py
www/: index.html
