[tool.poetry]
name = "fellracemap"
version = "0.1.0"
description = ""
authors = ["Tom Liptrot <tom@ortom.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"
pandas = "^1.3.4"
beautifulsoup4 = "^4.10.0"
lxml = "^4.7.1"
folium = "^0.12.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
black = {extras = ["jupyter"], version = "^21.9b0"}
pytest = "^6.2.5"
jupyter = "^1.0.0"
jupyterlab = "^3.2.4"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build = 'fellracemap.map:main'
